--- a/gb/20/10/31/n12515027.md
+++ b/gb/20/10/31/n12515027.md
@@ -342,7 +342,7 @@
 
 <strong>编辑推荐：</strong>
 <li><a href="https://github.com/onzhi266/djy/blob/master/gb/20/2/22/n11887949.md#1">美参议员：中共刻意控制新冠病毒信息流动</a></li>
-<li><a href="https://github.com/tsiac2612/djy/blob/master/gb/18/3/14/n10217581.md#1" target="_blank">极限饥饿：灵与肉的双重凌迟（下）</a></li><li><a href="https://github.com/vgeyyv307/www/blob/master/README.md?dfh#1" target="_blank">下载免费翻墙软件</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/18/9/3/n10687820.md#1" target="_blank">一位中国花季少女给奶奶的那个吻</a></li>
+<li><a href="https://github.com/tsiac2612/djy/blob/master/gb/18/6/27/n10515765.md#1" target="_blank">孙盛起：自己选择的路，只好用上吊绳走完</a></li><li><a href="https://github.com/vgeyyv307/djy/blob/master/gb/11/6/17/n3289382.md?dfh#1" target="_blank">探寻真相兼听则明</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/18/11/22/n10869318.md#1" target="_blank">这些前中共军官对李洪志大师的感恩</a></li>
 <hr>
 
 <strong>热门新闻：</strong>
