--- a/gb/nf1351518.md
+++ b/gb/nf1351518.md
@@ -13,23 +13,23 @@
 <a href="https://github.com/vgeyyv307/djy/blob/master/gb/20/11/3/n12521031.md#1" title="【内幕】高校内部文件泄中共无自信""><img width="73" src="https://i.epochtimes.com/assets/uploads/2020/11/GettyImages-166894743-600x400-320x200.jpg">&nbsp;</a>
 <a href="https://github.com/vgeyyv307/djy/blob/master/gb/20/11/3/n12523312.md#1" title="【图解】选前震撼弹 拜登电脑门事件簿""><img width="73" src="https://i.epochtimes.com/assets/uploads/2020/11/joe-biden-dnm-djy-1104-320x200.jpg">&nbsp;</a>
 <p align="center"><a href="https://github.com/vgeyyv307/djy/blob/master/gb/nf4514.md#1">更多头条......</a><hr><h2><p><strong>即时快讯&nbsp;&#160;&nbsp;&#160; :bar_chart: <a target="_blank" href="https://vgeyyv307.github.io/vd/yq.html">全球疫情地图</a></strong></p></h2>
-:clock8: <em>12分钟</em>&nbsp;&#160;&nbsp;&#160;:speech_balloon:<br><a href="https://github.com/vgeyyv307/djy/blob/master/gb/20/11/4/n12525982.md#1">质问选票舞弊 川普推文遭推特删除</a><br>
-:clock8: <em>20分钟</em>&nbsp;&#160;&nbsp;&#160;:speech_balloon:<br><a href="https://github.com/vgeyyv307/djy/blob/master/gb/20/11/4/n12525769.md#1">川普团队提告 要求密州、宾州暂停计票</a><br>
-:clock8: <em>33分钟</em>&nbsp;&#160;&nbsp;&#160;:speech_balloon:<br><a href="https://github.com/vgeyyv307/djy/blob/master/gb/20/11/4/n12525635.md#1">【役情最前线】川普称赢 吁法庭裁定结果</a><br>
-:clock8: <em>51分钟</em>&nbsp;&#160;&nbsp;&#160;:speech_balloon:<br><a href="https://github.com/vgeyyv307/djy/blob/master/gb/20/11/4/n12525964.md#1">发现计票欺诈 朱利安尼与法律团队赶往费城</a><br>
+:clock8: <em>9分钟</em>&nbsp;&#160;&nbsp;&#160;:speech_balloon:<br><a href="https://github.com/vgeyyv307/djy/blob/master/gb/20/11/4/n12525925.md#1">美国伊州选民公投否决加征富人所得税</a><br>
+:clock8: <em>29分钟</em>&nbsp;&#160;&nbsp;&#160;:speech_balloon:<br><a href="https://github.com/vgeyyv307/djy/blob/master/gb/20/11/4/n12525982.md#1">质问选票舞弊 川普推文遭推特删除</a><br>
+:clock8: <em>37分钟</em>&nbsp;&#160;&nbsp;&#160;:speech_balloon:<br><a href="https://github.com/vgeyyv307/djy/blob/master/gb/20/11/4/n12525769.md#1">川普团队提告 要求密州、宾州暂停计票</a><br>
+:clock8: <em>51分钟</em>&nbsp;&#160;&nbsp;&#160;:speech_balloon:<br><a href="https://github.com/vgeyyv307/djy/blob/master/gb/20/11/4/n12525635.md#1">【役情最前线】川普称赢 吁法庭裁定结果</a><br>
+:clock8: <em>1小时</em>&nbsp;&#160;&nbsp;&#160;:speech_balloon:<br><a href="https://github.com/vgeyyv307/djy/blob/master/gb/20/11/4/n12525964.md#1">发现计票欺诈 朱利安尼与法律团队赶往费城</a><br>
 :clock8: <em>1小时</em>&nbsp;&#160;&nbsp;&#160;:speech_balloon:<br><a href="https://github.com/vgeyyv307/djy/blob/master/gb/20/11/4/n12525789.md#1">密歇根州一个县“计票结果明显不正确”</a><br>
-:clock8: <em>1小时</em>&nbsp;&#160;&nbsp;&#160;:speech_balloon:<br><a href="https://github.com/vgeyyv307/djy/blob/master/gb/20/11/4/n12523931.md#1">美国首个唐氏症女模特 代言高端护肤品</a><br>
 <hr><h2><p><strong>新闻排行</strong></p></h2>
 <a href="https://github.com/vgeyyv307/djy/blob/master/gb/20/11/3/n12521231.md#1">【翻墙必看】55岁华为副总裁猝死</a><br>
 <a href="https://github.com/vgeyyv307/djy/blob/master/gb/20/11/4/n12524176.md#1">【翻墙必看】马云得罪王岐山？蚂蚁集团暂停上市</a><br>
 <a href="https://github.com/vgeyyv307/djy/blob/master/gb/20/11/3/n12522937.md#1">马云被约谈 电影“功守道”片段走红</a><br>
-<a href="https://github.com/vgeyyv307/djy/blob/master/gb/20/11/2/n12520381.md#1">美军售台湾4架MQ-9海卫士无人机 接近获批</a><br>
 <a href="https://github.com/vgeyyv307/djy/blob/master/gb/20/11/3/n12522469.md#1">美中媒体战升级 汪文斌跳脚 美国强硬回呛</a><br>
 <a href="https://github.com/vgeyyv307/djy/blob/master/gb/20/11/3/n12521086.md#1">中国传媒大学前副校长获刑 曾被举报性侵女生</a><br>
 <a href="https://github.com/vgeyyv307/djy/blob/master/gb/20/11/4/n12524572.md#1">蚂蚁被暂停上市 分析指大型集资威胁中共</a><br>
 <a href="https://github.com/vgeyyv307/djy/blob/master/gb/20/11/4/n12524549.md#1">美国大选开票 中共控制报导 网民议论纷纷</a><br>
 <a href="https://github.com/vgeyyv307/djy/blob/master/gb/20/11/4/n12524300.md#1">美州务卿：从未在大选投票日当晚得最终数据</a><br>
 <a href="https://github.com/vgeyyv307/djy/blob/master/gb/20/11/3/n12522533.md#1">马云被约谈后 蚂蚁集团中港股突然暂缓上市</a><br>
+<a href="https://github.com/vgeyyv307/djy/blob/master/gb/20/11/3/n12523127.md#1">中共同世卫相勾结 中共病毒源头仍是谜</a><br>
 <br><p align="center"><a href="https://github.com/vgeyyv307/djy/blob/master/gb/nscrw413.md#1">更多......</a></p><hr><h2><p><strong>纪元推荐</strong></p></h2>
 <a href="https://github.com/vgeyyv307/djy/blob/master/gb/20/11/2/n12520590.md#1">钟原：美大选关键时刻 中共党媒报导淡化处理</a><br>
 <a href="https://github.com/vgeyyv307/djy/blob/master/gb/20/11/2/n12520639.md#1">【独家】中领馆管控公派学者更多证据曝光</a><br>
@@ -42,7 +42,7 @@
 
 ```diff
 !退出中共党、团、队总人数:
-!共 366,864,929 人
+!共 366,865,152 人
 ```
 </strong><p align="center"><strong align="center"><a href="https://x.co/dd3">我要退出中共党团队</a></strong></h2></td>
 <td VALIGN=TOP width="352">
