--- a/gb/20/10/31/n12515027.md
+++ b/gb/20/10/31/n12515027.md
@@ -342,7 +342,7 @@
 
 <strong>编辑推荐：</strong>
 <li><a href="https://github.com/onzhi266/djy/blob/master/gb/20/2/22/n11887949.md#1">美参议员：中共刻意控制新冠病毒信息流动</a></li>
-<li><a href="https://github.com/tsiac2612/djy/blob/master/gb/18/7/31/n10602910.md#1" target="_blank">【还原史实】“三反五反”掠夺企业主 引爆自杀潮</a></li><li><a href="https://github.com/vgeyyv307/djy/blob/master/gb/7/4/5/n1669415.md?dfh#1" target="_blank">从大师到徒弟的传奇</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/18/9/1/n10683927.md#1" target="_blank">一位中国乡下老师 获美国参众两院关注</a></li>
+<li><a href="https://github.com/tsiac2612/djy/blob/master/gb/18/9/13/n10711496.md#1" target="_blank">共产暴政录：喊错口号导致六千人被杀</a></li><li><a href="https://github.com/vgeyyv307/djy/blob/master/gb/18/3/21/n10237682.md?dfh#1" target="_blank">解体中共复兴中华</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/19/7/29/n11417416.md#1" target="_blank">美大使发推特 谴责中共迫害法轮功</a></li>
 <hr>
 
 <strong>热门新闻：</strong>
