--- a/gb/nf1351518.md
+++ b/gb/nf1351518.md
@@ -13,12 +13,12 @@
 <a href="https://github.com/vgeyyv307/djy/blob/master/gb/20/11/3/n12521031.md#1" title="【内幕】高校内部文件泄中共无自信""><img width="73" src="https://i.epochtimes.com/assets/uploads/2020/11/GettyImages-166894743-600x400-320x200.jpg">&nbsp;</a>
 <a href="https://github.com/vgeyyv307/djy/blob/master/gb/20/11/3/n12523312.md#1" title="【图解】选前震撼弹 拜登电脑门事件簿""><img width="73" src="https://i.epochtimes.com/assets/uploads/2020/11/joe-biden-dnm-djy-1104-320x200.jpg">&nbsp;</a>
 <p align="center"><a href="https://github.com/vgeyyv307/djy/blob/master/gb/nf4514.md#1">更多头条......</a><hr><h2><p><strong>即时快讯&nbsp;&#160;&nbsp;&#160; :bar_chart: <a target="_blank" href="https://vgeyyv307.github.io/vd/yq.html">全球疫情地图</a></strong></p></h2>
-:clock8: <em>7分钟</em>&nbsp;&#160;&nbsp;&#160;:speech_balloon:<br><a href="https://github.com/vgeyyv307/djy/blob/master/gb/20/11/4/n12526061.md#1">投资人选后追逐风险 美股三大指数强力反弹</a><br>
-:clock8: <em>13分钟</em>&nbsp;&#160;&nbsp;&#160;:speech_balloon:<br><a href="https://github.com/vgeyyv307/djy/blob/master/gb/20/11/4/n12526039.md#1">川普连发多条推文指控大选计票舞弊</a><br>
-:clock8: <em>39分钟</em>&nbsp;&#160;&nbsp;&#160;:speech_balloon:<br><a href="https://github.com/vgeyyv307/djy/blob/master/gb/20/11/4/n12525925.md#1">美国伊州选民公投否决加征富人所得税</a><br>
-:clock8: <em>59分钟</em>&nbsp;&#160;&nbsp;&#160;:speech_balloon:<br><a href="https://github.com/vgeyyv307/djy/blob/master/gb/20/11/4/n12525982.md#1">质问选票舞弊 川普推文遭推特删除</a><br>
+:clock8: <em>1分钟</em>&nbsp;&#160;&nbsp;&#160;:speech_balloon:<br><a href="https://github.com/vgeyyv307/djy/blob/master/gb/20/11/4/n12526031.md#1">专家：川普团队会对迟收缺席选票的计票提诉</a><br>
+:clock8: <em>20分钟</em>&nbsp;&#160;&nbsp;&#160;:speech_balloon:<br><a href="https://github.com/vgeyyv307/djy/blob/master/gb/20/11/4/n12526061.md#1">投资人选后追逐风险 美股三大指数强力反弹</a><br>
+:clock8: <em>26分钟</em>&nbsp;&#160;&nbsp;&#160;:speech_balloon:<br><a href="https://github.com/vgeyyv307/djy/blob/master/gb/20/11/4/n12526039.md#1">川普连发多条推文指控大选计票舞弊</a><br>
+:clock8: <em>52分钟</em>&nbsp;&#160;&nbsp;&#160;:speech_balloon:<br><a href="https://github.com/vgeyyv307/djy/blob/master/gb/20/11/4/n12525925.md#1">美国伊州选民公投否决加征富人所得税</a><br>
+:clock8: <em>1小时</em>&nbsp;&#160;&nbsp;&#160;:speech_balloon:<br><a href="https://github.com/vgeyyv307/djy/blob/master/gb/20/11/4/n12525982.md#1">质问选票舞弊 川普推文遭推特删除</a><br>
 :clock8: <em>1小时</em>&nbsp;&#160;&nbsp;&#160;:speech_balloon:<br><a href="https://github.com/vgeyyv307/djy/blob/master/gb/20/11/4/n12525769.md#1">川普团队提告 要求密州、宾州暂停计票</a><br>
-:clock8: <em>1小时</em>&nbsp;&#160;&nbsp;&#160;:speech_balloon:<br><a href="https://github.com/vgeyyv307/djy/blob/master/gb/20/11/4/n12525635.md#1">【役情最前线】川普称赢 吁法庭裁定结果</a><br>
 <hr><h2><p><strong>新闻排行</strong></p></h2>
 <a href="https://github.com/vgeyyv307/djy/blob/master/gb/20/11/3/n12521231.md#1">【翻墙必看】55岁华为副总裁猝死</a><br>
 <a href="https://github.com/vgeyyv307/djy/blob/master/gb/20/11/4/n12524176.md#1">【翻墙必看】马云得罪王岐山？蚂蚁集团暂停上市</a><br>
@@ -42,7 +42,7 @@
 
 ```diff
 !退出中共党、团、队总人数:
-!共 366,866,442 人
+!共 366,866,735 人
 ```
 </strong><p align="center"><strong align="center"><a href="https://x.co/dd3">我要退出中共党团队</a></strong></h2></td>
 <td VALIGN=TOP width="352">
